from .attributes import _Attributes

class _Datasets:
    def __init__(self):
        self.__datasets: dict ={}
        self.__atttributes = _Attributes()