from collections.abc import Iterator, Sequence
from itertools import chain

import torch
from torch.utils.data import Dataset

from ..readers.base_reader import BaseReader
from ..transforms import ThermoTransform
from .datacontainer import DataContainer


class ThermoDataset(Dataset):
    """PyTorch dataset that combines multiple readers into a single dataset.

    Automatically handles file indexing across different data sources (local, S3, etc.)
    and applies transforms consistently. Compatible with PyTorch DataLoaders.
    """

    def __init__(self, data_source: BaseReader | Sequence[BaseReader], transform: ThermoTransform | None = None):
        """Create dataset from one or more readers.

        Files are discovered and downloaded (if remote) during initialization for
        predictable performance during training.

        Parameters:
            data_source: Single reader or list of readers to combine
            transform: Optional transform applied to each container when loaded

        Raises:
            ValueError: If duplicate files found or no files available
        """
        # Convert single reader to list
        data_source = [data_source] if isinstance(data_source, BaseReader) else list(data_source)

        # Validate the readers
        self._validate_readers(data_source)

        # Write the readers and transforms to the private attributes
        self.__readers = data_source
        self.__transform = transform

        # Eagerly load files from all readers
        for reader in self.__readers:
            # Download files if remote and download_files is True
            if reader.remote_source and reader.download_files:
                reader.download()

        # Build the index map
        self._build_index()

    def _validate_readers(self, readers: list[BaseReader]):
        """Validate readers and check for duplicates."""
        # Check if the readers have found any files and if there are any duplicates
        # Check if all readers have enabled file caching
        for reader in readers:
            # Check for stable file list during training
            if not reader.cache_files:
                print(
                    f"Warning: {reader.__class__.__name__} has cache_files=False. File list may change during training."
                )

            # Check for efficient remote access
            if reader.remote_source and not reader.download_files:
                print(
                    f"Warning: {reader.__class__.__name__} is remote but download_files=False. "
                    f"This will be slower for repeated access."
                )

        # Group all the readers by type
        readers_by_type: dict[type[BaseReader], list[BaseReader]] = {}
        for reader in readers:
            readers_by_type[type(reader)] = readers_by_type.get(type(reader), []) + [reader]

        # Check if any of the readers that are of the same type find duplicate or invalid data
        for reader_type, readers in readers_by_type.items():
            # When there a multiple readers ==> check for duplicate files
            if len(readers) > 1:
                all_files: set[str] = set()
                duplicate_files: set[str] = set()

                for reader in readers:
                    # Check if the reader has found any files
                    if not reader.files:
                        raise ValueError(f"No files found for reader of type {reader_type.__qualname__}")

                    # Check for duplicate files
                    reader_files = set(reader.files)
                    new_duplicates = reader_files.intersection(all_files)
                    if new_duplicates:
                        duplicate_files.update(new_duplicates)

                    all_files.update(reader_files)

                if duplicate_files:
                    raise ValueError(
                        f"Duplicate files found for reader of type {reader_type.__qualname__}: \n {duplicate_files}"
                    )

            # Else duplicates are not possible ==> Check if the reader has found any files
            else:
                if len(readers[0].files) == 0:
                    raise ValueError(f"No files found for reader of type {reader_type.__qualname__}")

    def _build_index(self):
        """Build an index map using 2 torch Tensors.

        This is done to achieve a fast and memory efficient mapping of reader and file index to the global index
        of the dataset. 1 Tensor is used to store the reader index and the other Tensor is used to store the file index.
        """
        reader_indices: list[int] = []
        file_indices: list[int] = []
        for reader_idx, reader in enumerate(self.__readers):
            reader_indices.extend([reader_idx] * len(reader.files))
            file_indices.extend(range(len(reader.files)))

        self.__reader_index = torch.tensor(reader_indices, dtype=torch.uint8, requires_grad=False)
        self.__file_index = torch.tensor(file_indices, dtype=torch.int32, requires_grad=False)

    @property
    def files(self) -> list[str]:
        return [file for reader in self.__readers for file in reader.files]

    def __len__(self) -> int:
        return sum([len(reader.files) for reader in self.__readers])

    def __getitem__(self, idx) -> DataContainer:
        # Check if the index is valid
        if idx < 0 or idx >= len(self):
            raise IndexError("Index out of range")

        # Extract the reader and file index from the index map
        reader_idx = int(self.__reader_index[idx].item())
        file_idx = int(self.__file_index[idx].item())

        # Try to read the file
        try:
            # Read the file from the reader
            data = self.__readers[reader_idx][file_idx]

            # Apply the transform if any is given
            if self.__transform:
                data = self.__transform(data)

            return data

        except FileNotFoundError:
            print(f"File not found for reader {self.__readers[reader_idx].__repr__()} at index {file_idx}")

        except Exception as e:
            print(f"Error reading file for reader {self.__readers[reader_idx].__repr__()} at index {file_idx}: {e}")

        # Return an empty DataContainer if the file could not be read
        return DataContainer()

    def __iter__(self) -> Iterator[DataContainer]:
        return (self.__transform(data) if self.__transform else data for data in chain.from_iterable(self.__readers))


class IndexedThermoDataset(ThermoDataset):
    """Extension of ThermoDataset that supports indexing with optional additional transforms.

    The IndexedThermoDataset maintains a subset of the parent dataset and allows for an additional transform to be
    applied to the data. This can be useful when a subset of the data needs to be selected and a different transform
    needs to be applied to the subset, e.g. for random splits of train, validation and test data. The
    IndexedThermoDataset maintains the transform chain of the parent dataset and appends the additional transform to it.
    """

    def __init__(self, dataset: ThermoDataset, indices: Sequence[int], transform: ThermoTransform | None = None):
        """Initialize an indexed dataset with optional additional transform.

        Parameters:
            dataset (ThermoDataset): Parent dataset to index into
            indices (Sequence[int]): Sequence of indices to select from parent
            transform (ThermoTransform, optional): Optional transform to apply after parent's transform

        Raises:
            IndexError: If any of the provided indices are out of range
        """
        # Validate the indices
        if not all(0 <= i < len(dataset) for i in indices):
            raise IndexError(f"Provided indices are out of range. Must be within [0, {len(dataset) - 1}]")

        # Store parent dataset and indices
        self.__dataset = dataset  # Original dataset
        self.__indices = indices  # Indices for subset
        self.__transform = transform  # Additional transform

    def __len__(self) -> int:
        """Return length of indexed dataset."""
        return len(self.__indices)

    def __iter__(self) -> Iterator[DataContainer]:
        """Return iterator over indexed subset."""
        return (self[i] for i in range(len(self.__indices)))

    def __getitem__(self, idx: int) -> DataContainer:
        """Get an item with proper transform chain.

        Args:
            idx (int): Index into the subset

        Returns:
            DataContainer: Transformed data container
        """
        # Validate index
        if idx < 0 or idx >= len(self):
            raise IndexError("Index out of range")

        # Get data using parent dataset's underlying logic ==> Apply parent transform
        data = self.__dataset[self.__indices[idx]]

        # Apply additional transform if specified
        if self.__transform:
            data = self.__transform(data)

        return data

    @property
    def files(self) -> list[str]:
        """Return list of files corresponding to indexed subset."""
        return [self.__dataset.files[i] for i in self.__indices]
